--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <div class="container">
       <h1>Welcome to My Landing Page</h1>
       <p>This is a simple landing page for the first endpoint of my API.</p>
-      <a href="/info">Go to API</a>
+      <a href="/api">Go to API</a>
     </div>
   </body>
 </html>
